Add few similar layouts

--- a/res/layout/history.xml
+++ b/res/layout/history.xml
@@ -11,7 +11,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Тренировки"
+                android:text="История"
                 android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
                 android:textSize="30dp" android:layout_marginLeft="20dp"/>
         <ImageButton
@@ -30,22 +30,10 @@
 
         <ListView
                 android:layout_width="fill_parent"
-                android:layout_height="441dp"
-                android:id="@+id/trainList" android:layout_gravity="right|bottom"
-                tools:listitem="@layout/list_item" android:divider="#dedede"
+                android:layout_height="match_parent"
+                android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
+                tools:listitem="@android:layout/simple_list_item_2" android:divider="#dedede"
                 android:dividerHeight="1dp" />
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:background="@drawable/button"
-                android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:textSize="50dp"
-                android:textColor="#ffffff"/>
 
     </FrameLayout>
 </LinearLayout>
