--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -11,16 +11,9 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Тренировки"
+                android:text="Создание тренировки"
                 android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
                 android:textSize="30dp" android:layout_marginLeft="20dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton" android:layout_gravity="right|center_vertical"
-
-                android:src="@drawable/ic_history_white_24dp_big" android:layout_marginRight="15dp"
-                android:background="#00ff2234"/>
     </FrameLayout>
     <FrameLayout
             android:layout_width="match_parent"
@@ -30,8 +23,8 @@
 
         <ListView
                 android:layout_width="fill_parent"
-                android:layout_height="441dp"
-                android:id="@+id/trainList" android:layout_gravity="right|bottom"
+                android:layout_height="367dp"
+                android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
                 tools:listitem="@layout/list_item" android:divider="#dedede"
                 android:dividerHeight="1dp" />
         <ImageButton
