--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:padding="10dp"
-          android:textColor="#000000"
-          android:textSize="20sp">
-</TextView>
+<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@android:id/text1"
+                 android:layout_width="match_parent"
+                 android:layout_height="?android:attr/listPreferredItemHeightSmall"
+                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                 android:gravity="center_vertical"
+                 android:checkMark="@drawable/check_selector"
+
+                 android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+                 android:paddingEnd="15dp"
+                 android:textColor="#000000"
+
+        />
