--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:background="@drawable/button"
+                android:background="@drawable/button_add"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
                 android:id="@+id/button"
                 android:layout_gravity="right|bottom"
