--- a/res/layout/history.xml
+++ b/res/layout/history.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="#ffffff">
+              android:weightSum="1"
+              android:background="#ffffff">
+
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp" android:layout_gravity="center_horizontal"
-            android:id="@+id/frameLayout" android:background="#ffa500">
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/frameLayout"
+            android:background="#ffa500">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="История"
-                android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
-                android:textSize="30dp" android:layout_marginLeft="20dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton" android:layout_gravity="right|center_vertical"
-
-                android:src="@drawable/ic_history_white_24dp_big" android:layout_marginRight="15dp"
-                android:background="#00ff2234"/>
+                android:text="@string/history_title"
+                android:id="@+id/textView"
+                android:layout_gravity="left|center_vertical"
+                android:textColor="#ffffff"
+                android:textSize="30dp"
+                android:layout_marginLeft="20dp"/>
     </FrameLayout>
+
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,9 +34,12 @@
         <ListView
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
-                tools:listitem="@android:layout/simple_list_item_2" android:divider="#dedede"
-                android:dividerHeight="1dp" />
+                android:id="@+id/historyListView"
+                android:layout_gravity="center_horizontal|top"
+                tools:listitem="@layout/history_list_item"
+                android:divider="#dedede"
+                android:dividerHeight="1dp"
+                />
 
     </FrameLayout>
 </LinearLayout>
