--- a/res/layout/workout_creating_removing.xml
+++ b/res/layout/workout_creating_removing.xml
@@ -39,7 +39,18 @@
                 android:layout_marginBottom="20dp"
                 android:textSize="50dp"
                 android:textColor="#ffffff"/>
-
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_delete"
+                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
+                android:id="@+id/button_delete"
+                android:layout_gravity="left|bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="50dp"
+                android:textColor="#f00"/>
     </FrameLayout>
 </LinearLayout>
 
