--- a/res/layout/history_removing.xml
+++ b/res/layout/history_removing.xml
@@ -17,23 +17,12 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/main_title"
+                android:text="@string/history_title"
                 android:id="@+id/textView"
-                android:layout_gravity="start|center_vertical"
+                android:layout_gravity="left|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30sp"
-                android:layout_marginStart="20dp"/>
-
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
-                android:layout_gravity="end|center_vertical"
-
-                android:src="@drawable/ic_history_white_24dp_big"
-                android:layout_marginEnd="15dp"
-                android:background="#00ff2234"/>
-
+                android:textSize="30dp"
+                android:layout_marginLeft="20dp"/>
     </FrameLayout>
 
     <FrameLayout
@@ -43,27 +32,27 @@
 
 
         <ListView
-                android:id="@+id/mainTrainList"
+                android:id="@+id/historyListView"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="start|top"
-                tools:listitem="@layout/list_item"
+                android:layout_gravity="center_horizontal|top"
+                tools:listitem="@layout/history_list_item"
                 android:divider="#dedede"
-                android:dividerHeight="1dp"/>
+                android:dividerHeight="1dp"
+                />
 
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:background="@drawable/button_add"
-                android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
-                android:layout_gravity="end|bottom"
-                android:layout_marginEnd="20dp"
+                android:background="@drawable/button_delete"
+                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
+                android:id="@+id/button_delete"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="20dp"
                 android:layout_marginBottom="20dp"
                 android:textSize="50sp"
-                android:textColor="#fff"/>
-
+                android:textColor="#f00"/>
     </FrameLayout>
 </LinearLayout>
 
