--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"-->
-                 <!--android:id="@android:id/text1"-->
-                 <!--android:layout_width="match_parent"-->
-                 <!--android:layout_height="?android:attr/listPreferredItemHeightSmall"-->
-                 <!--android:textAppearance="?android:attr/textAppearanceListItemSmall"-->
-                 <!--android:gravity="center_vertical"-->
-                 <!--android:checkMark="@drawable/check_selector"-->
 
-                 <!--android:paddingStart="?android:attr/listPreferredItemPaddingStart"-->
-                 <!--android:paddingEnd="15dp"-->
-                 <!--android:textColor="#000000"-->
 
-        <!--/>-->
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:id="@android:id/text1"
-                 android:layout_width="match_parent"
-                 android:layout_height="?android:attr/listPreferredItemHeightSmall"
-                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                 android:gravity="center_vertical"
-                 android:checkMark="@drawable/check_selector"
-                 android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-                 android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-                 android:textColor="#000000"/>
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
+        >
+
+    <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:layout_gravity="end|center_vertical"
+            android:button="@drawable/check_selector"
+            android:checked="false"
+            />
+
+    <TextView
+            android:id="@+id/listItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/workoutName"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:textAlignment="center"
+            android:layout_centerInParent="true"
+            android:layout_gravity="left|center_vertical"/>
+
+</FrameLayout>
