--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
-            android:text="@string/workoutName"
+            android:text="@string/workout_name"
             android:textSize="20sp"
             android:textColor="#000"
             android:textAlignment="center"
