--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -43,7 +43,7 @@
 
 
         <ListView
-                android:id="@+id/mainTrainList"
+                android:id="@+id/trainList"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start|top"
