--- a/res/layout/workout_creating_removing.xml
+++ b/res/layout/workout_creating_removing.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="#ffffff">
+              android:weightSum="1"
+              android:background="#ffffff">
+
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp" android:layout_gravity="center_horizontal"
-            android:id="@+id/frameLayout" android:background="#ffa500">
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/frameLayout"
+            android:background="#ffa500">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="Создание тренировки"
-                android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
-                android:textSize="30dp" android:layout_marginLeft="20dp"/>
+                android:id="@+id/textView"
+                android:layout_gravity="left|center_vertical"
+                android:textColor="#ffffff"
+                android:textSize="30dp"
+                android:layout_marginLeft="20dp"/>
     </FrameLayout>
+
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,10 +33,13 @@
 
         <ListView
                 android:layout_width="fill_parent"
-                android:layout_height="391dp"
-                android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
-                tools:listitem="@layout/list_item" android:divider="#dedede"
-                android:dividerHeight="1dp" />
+                android:layout_height="371dp"
+                android:id="@+id/trainList"
+                android:layout_gravity="center_horizontal|top"
+                tools:listitem="@layout/list_item"
+                android:divider="#dedede"
+                android:dividerHeight="1dp"/>
+
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -39,6 +52,7 @@
                 android:layout_marginBottom="20dp"
                 android:textSize="50dp"
                 android:textColor="#ffffff"/>
+
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
