--- a/res/layout/dialog_set_weight.xml
+++ b/res/layout/dialog_set_weight.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/editText2" android:layout_column="0" android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp" android:layout_row="1"
 
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp" android:theme="@android:style/Theme.Material.Light"/>
         <EditText
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
@@ -54,18 +54,20 @@
                 android:id="@+id/editText3" android:layout_column="1"
                 android:maxLength="6"
                 android:maxWidth="100dp" android:numeric="decimal" android:layout_row="1"
-                android:layout_marginLeft="10dp" android:layout_marginRight="15dp" android:layout_marginBottom="10dp"/>
+                android:layout_marginLeft="10dp" android:layout_marginRight="15dp" android:layout_marginBottom="10dp"
+                android:theme="@android:style/Theme.Material.Light"/>
         <Button
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="OK"
                 android:id="@+id/button2" android:layout_row="2" android:layout_column="0"
-                android:layout_marginLeft="15dp" android:layout_marginBottom="10dp"/>
+                android:layout_marginLeft="15dp" android:layout_marginBottom="10dp"
+                android:theme="@android:style/Theme.Material.Light"/>
         <Button
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="Отмена"
                 android:id="@+id/button3" android:layout_row="2" android:layout_column="1"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp" android:theme="@android:style/Theme.Material.Light"/>
     </GridLayout>
 </LinearLayout>
