--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -20,25 +20,27 @@
     </FrameLayout>
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="162dp" android:layout_gravity="center_horizontal">
+            android:layout_height="162dp" android:layout_gravity="center_horizontal"
+            android:theme="@android:style/Theme.Material.Light">
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText" android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp" android:autoText="false" android:editable="false"
                 android:inputType="text" android:maxLength="50" android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" android:nestedScrollingEnabled="true" android:hint="Введите название"/>
+                android:layout_marginRight="10dp" android:nestedScrollingEnabled="true"
+                android:theme="@android:style/Theme.Material.Light.Dialog.Alert"/>
         <Button
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
                 android:text="OK"
                 android:id="@+id/button4" android:layout_gravity="left|bottom" android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp" android:theme="@android:style/Theme.Material.Light"/>
         <Button
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
                 android:text="Отмена"
                 android:id="@+id/button5" android:layout_gravity="right|bottom" android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp" android:theme="@android:style/Theme.Material.Light"/>
     </FrameLayout>
 </LinearLayout>
