--- a/res/layout/workout.xml
+++ b/res/layout/workout.xml
@@ -11,7 +11,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Тренировки"
+                android:text="@string/workout_name"
                 android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
                 android:textSize="30dp" android:layout_marginLeft="20dp"/>
         <ImageButton
