--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -11,9 +11,9 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Создание тренировки"
+                android:text="@string/workout_creation"
                 android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:textColor="#ffffff"
-                android:textSize="30dp" android:layout_marginLeft="20dp"/>
+                android:textSize="30sp" android:layout_marginLeft="20dp"/>
     </FrameLayout>
     <FrameLayout
             android:layout_width="match_parent"
@@ -23,7 +23,7 @@
 
         <ListView
                 android:layout_width="fill_parent"
-                android:layout_height="391dp"
+                android:layout_height="match_parent"
                 android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
                 tools:listitem="@layout/list_item" android:divider="#dedede"
                 android:dividerHeight="1dp" />
