Add workout_* layouts, change colors, fonts somewhere

--- a/res/drawable/button_end.xml
+++ b/res/drawable/button_end.xml
@@ -3,8 +3,7 @@
     <item>
         <shape android:shape="oval">
             <size android:height="70dp" android:width="70dp"/>
-            <solid android:color="#ffa500"/>
+            <solid android:color="@color/green"/>
         </shape>
     </item>
-
 </selector>
