--- a/res/drawable/button_delete.xml
+++ b/res/drawable/button_delete.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="oval">
             <size android:height="70dp" android:width="70dp"/>
-            <solid android:color="#f00"/>
+            <solid android:color="@color/red"/>
         </shape>
     </item>
 </selector>
