--- a/res/layout/history_detailed_list_item.xml
+++ b/res/layout/history_detailed_list_item.xml
@@ -2,30 +2,41 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         >
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@android:id/text1"
-              android:layout_width="wrap_content"
-              android:layout_height="30dp"
-              android:paddingStart="40dp"
-              android:gravity="center_vertical"
-              android:textSize="20sp"
-              android:textColor="#000"
-            />
-
-    <TextView
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="30dp"
-            android:paddingStart="10dp"
-            android:textSize="15sp"
-            android:textColor="#26000000"
-            android:text="(4 подхода)"
-            />
+            android:orientation="horizontal"
+            android:gravity="start|center"
+            >
+
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@android:id/text1"
+                  android:layout_width="280dp"
+                  android:layout_height="fill_parent"
+                  android:paddingStart="20dp"
+                  android:gravity="center_vertical"
+                  android:text="Название упражнения"
+                  android:maxWidth="250dp"
+                  android:maxLines="1"
+                  android:textSize="20sp"
+                  android:textColor="#000"/>
+
+        <TextView
+                android:layout_width="100dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="end"
+                android:gravity="center_vertical"
+                android:textSize="15sp"
+                android:textColor="#26000000"
+                android:text="(4 подхода)"
+                />
+    </LinearLayout>
 
 </LinearLayout>
 
