--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:background="@drawable/button_add"
+                android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
                 android:id="@+id/button"
                 android:layout_gravity="end|bottom"
