--- a/res/layout/workout_creating_removing.xml
+++ b/res/layout/workout_creating_removing.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:background="@drawable/button_add"
+                android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
                 android:id="@+id/button"
                 android:layout_gravity="right|bottom"
@@ -63,8 +63,7 @@
                 android:layout_gravity="left|bottom"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
-                android:textSize="50dp"
-                android:textColor="#f00"/>
+                android:textSize="50dp"/>
     </FrameLayout>
 </LinearLayout>
 
