--- a/res/layout/workout_started.xml
+++ b/res/layout/workout_started.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:weightSum="1"
-              android:background="#ffffff">
+              android:background="@color/light_grey_1">
 
     <FrameLayout
             android:layout_width="match_parent"
@@ -17,47 +17,62 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/main_title"
+                android:text="Название упражнения"
                 android:id="@+id/textView"
                 android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
                 android:textSize="30sp"
                 android:layout_marginStart="20dp"/>
 
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
-                android:layout_gravity="end|center_vertical"
-
-                android:src="@drawable/ic_history_white_24dp_big"
-                android:layout_marginEnd="15dp"
-                android:background="#00ff2234"/>
-
     </FrameLayout>
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#f6f9fb">
 
 
         <ListView
-                android:id="@+id/trainList"
+                android:id="@+id/exercisesList"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
+                android:layout_height="406dp"
                 android:layout_gravity="start|top"
-                tools:listitem="@layout/list_item"
+                tools:listitem="@layout/exercise_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"/>
-
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:background="@drawable/round_button"
-                android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
+                android:src="@drawable/ic_chevron_left_white_24dp"
+                android:id="@+id/prevButton"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="50sp"
+                android:textColor="#fff"/>
+
+        <!--<ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/round_button"
+                android:src="@drawable/ic_chevron_right_white_24dp"
+                android:id="@+id/nextButton"
+                android:layout_gravity="end|bottom"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="50sp"
+                android:textColor="#fff"/>
+-->
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_end"
+                android:src="@drawable/ic_done_white_24dp"
+                android:id="@+id/finishButton"
                 android:layout_gravity="end|bottom"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
@@ -65,19 +80,5 @@
                 android:textColor="#fff"/>
 
 
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:background="@drawable/button_delete"
-                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
-                android:id="@+id/button_delete"
-                android:layout_gravity="start|bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="20dp"
-                android:textSize="50sp"/>
-
     </FrameLayout>
-
 </LinearLayout>
-
