--- a/res/layout/workout.xml
+++ b/res/layout/workout.xml
@@ -17,8 +17,8 @@
     </FrameLayout>
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#f6f9fb">
+            android:layout_height="416dp"
+            android:background="#f6f9fb" android:layout_weight="1">
 
 
         <ListView
@@ -29,4 +29,9 @@
                 android:dividerHeight="1dp" android:choiceMode="singleChoice"/>
 
     </FrameLayout>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="@android:dimen/notification_large_icon_height"
+            android:id="@+id/button4" android:text="@string/workout_start" android:textSize="25sp"
+            android:theme="@style/AppTheme"/>
 </LinearLayout>
