--- a/res/layout/exercise_list_item.xml
+++ b/res/layout/exercise_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:id="@+id/editWeight"
-            android:hint="100"
+            android:hint=""
             android:imeOptions="flagNoExtractUi"
             android:layout_marginStart="5dp"
             style="@style/EditTextAppTheme"
@@ -43,7 +43,7 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:id="@+id/editReiterations"
-            android:hint="7"
+            android:hint=""
             android:inputType="numberDecimal"
             android:layout_gravity="start"
             android:imeOptions="flagNoExtractUi"
