--- a/res/layout/expandable_list_item_child_removable.xml
+++ b/res/layout/expandable_list_item_child_removable.xml
@@ -12,7 +12,7 @@
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left">
+            android:layout_gravity="left|center_vertical">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -60,6 +60,22 @@
                 android:textColor="#000"/>
     </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="5dp"
+            >
+        <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center_horizontal"
+                android:button="@drawable/check_selector"
+                android:checked="false"
+                />
+
+    </LinearLayout>
 
 
 
