--- a/res/layout/expandable_list_item_removable.xml
+++ b/res/layout/expandable_list_item_removable.xml
@@ -7,7 +7,6 @@
         android:paddingBottom="10dp"
         >
 
-
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -29,19 +28,19 @@
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="15dp">
+            android:layout_marginRight="5dp">
 
-        <TextView
+        <CheckBox
+                android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:textSize="15sp"
-                android:textColor="#26000000"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
-                android:text="(4 подхода)"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:button="@drawable/check_selector"
+                android:checked="false"
+                android:focusable="false"
                 />
     </LinearLayout>
 
