--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -24,15 +24,30 @@
                 android:textSize="30sp"
                 android:layout_marginStart="20dp"/>
 
-        <ImageButton
+
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
                 android:layout_gravity="end|center_vertical"
+                >
 
-                android:src="@drawable/ic_history_white_24dp_big"
-                android:layout_marginEnd="15dp"
-                android:background="#00ff2234"/>
+
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/historyButton"
+                    android:src="@drawable/ic_history_white_24dp_big"
+                    android:layout_marginEnd="15dp"
+                    android:background="#00ff2234"/>
+
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/infoButton"
+                    android:src="@drawable/ic_info_outline_white_24dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="#00ff2234"/>
+        </LinearLayout>
 
     </FrameLayout>
 
