--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="#ffffff">
+              android:weightSum="1"
+              android:background="#ffffff">
+
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp" android:layout_gravity="center_horizontal"
-            android:id="@+id/frameLayout" android:background="#ffa500">
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/frameLayout"
+            android:background="#ffa500">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/workout_creation"
-                android:id="@+id/textView" android:layout_gravity="start|center_vertical" android:textColor="#ffffff"
-                android:textSize="30sp" android:layout_marginStart="20dp"/>
+                android:text="Создание тренировки"
+                android:id="@+id/textView"
+                android:layout_gravity="left|center_vertical"
+                android:textColor="#ffffff"
+                android:textSize="30dp"
+                android:layout_marginLeft="20dp"/>
     </FrameLayout>
+
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f6f9fb">
 
 
-        <ListView
+        <ExpandableListView
+                android:id="@+id/workoutExpandableListView"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/trainList" android:layout_gravity="center_horizontal|top"
-                tools:listitem="@layout/list_item_exercises" android:divider="#dedede"
-                android:dividerHeight="1dp" android:choiceMode="singleChoice"/>
+                android:layout_gravity="center_horizontal|top"
+                android:divider="#dedede"
+                android:childDivider="#dedede"
+                android:dividerHeight="1dp"
+                tools:listitem="@android:layout/simple_list_item_checked"
+                android:background="@color/light_grey_1"
+                android:groupIndicator="@drawable/expandable_list_indicator"
+
+                />
+
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,12 +52,13 @@
                 android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
                 android:id="@+id/button"
-                android:layout_gravity="end|bottom"
-                android:layout_marginEnd="20dp"
+                android:layout_gravity="right|bottom"
+                android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
-                android:textSize="50sp"
+                android:textSize="50dp"
                 android:textColor="#ffffff"/>
 
+       
     </FrameLayout>
 </LinearLayout>
 
