--- a/res/drawable-hdpi/round_button_small.xml
+++ b/res/drawable-hdpi/round_button_small.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="oval">
             <size android:height="30dp" android:width="30dp"/>
-            <solid android:color="@color/light_grey_1"/>
+            <solid android:color="@color/light_gray_1"/>
         </shape>
     </item>
 </selector>
