--- a/res/layout/dialog_workout_name.xml
+++ b/res/layout/dialog_workout_name.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:background="@color/light_grey_1"
+              android:background="@color/light_gray_1"
               android:weightSum="1"
               android:baselineAligned="false">
 
