--- a/res/layout/exercise_info.xml
+++ b/res/layout/exercise_info.xml
@@ -3,7 +3,7 @@
               xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="#ffffff">
+              android:weightSum="1" android:background="@color/light_gray_1">
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp" android:layout_gravity="center_horizontal"
