--- a/res/layout/expandable_list_item_child.xml
+++ b/res/layout/expandable_list_item_child.xml
@@ -7,7 +7,7 @@
              android:paddingTop="5dp"
              android:textColor="#000"
              android:paddingStart="50dp"
-             android:background="@color/light_grey_2">
+             android:background="@color/light_gray_2">
 
     <LinearLayout
             android:layout_width="wrap_content"
