--- a/res/layout/workout_preview.xml
+++ b/res/layout/workout_preview.xml
@@ -17,7 +17,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Создание тренировки"
+                android:text="@string/history_title"
                 android:id="@+id/textView"
                 android:layout_gravity="left|center_vertical"
                 android:textColor="#ffffff"
@@ -28,37 +28,23 @@
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#f6f9fb">
+            android:background="@color/light_gray_1">
 
 
         <ExpandableListView
-                android:id="@+id/workoutExpandableListView"
+                android:id="@+id/historyExpandableListView"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|top"
                 android:divider="#dedede"
                 android:childDivider="#dedede"
                 android:dividerHeight="1dp"
-                tools:listitem="@android:layout/simple_list_item_checked"
+                tools:listitem="@layout/history_detailed_list_item"
                 android:background="@color/light_gray_1"
                 android:groupIndicator="@drawable/expandable_list_indicator"
 
                 />
 
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:textSize="50dp"
-                android:textColor="#ffffff"/>
 
-       
     </FrameLayout>
 </LinearLayout>
-
