--- a/res/layout/workout_started.xml
+++ b/res/layout/workout_started.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:weightSum="1"
-              android:background="@color/light_grey_1">
+              android:background="@color/light_gray_1">
 
     <FrameLayout
             android:layout_width="match_parent"
