Help, окно упражнения

--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -5,7 +5,7 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:weightSum="1"
-              android:background="#ffffff">
+              android:background="#fff">
 
     <FrameLayout
             android:layout_width="match_parent"
@@ -17,32 +17,37 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/history_title"
+                android:text="@string/help_title"
                 android:id="@+id/textView"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                android:textSize="30sp"
+                android:layout_marginStart="20dp"/>
+
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+        >
+
+        </LinearLayout>
+
     </FrameLayout>
 
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#f6f9fb">
+            android:background="@color/light_gray_1">
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+        android:text="Это помошь"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"/>
 
 
-        <ExpandableListView
-                android:id="@+id/historyExpandableListView"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal|top"
-                android:divider="#dedede"
-                android:childDivider="#dedede"
-                android:dividerHeight="1dp"
-                tools:listitem="@layout/history_detailed_list_item"
-                android:background="@color/light_gray_1"
-                android:groupIndicator="@drawable/expandable_list_indicator"
-
-                />
     </FrameLayout>
 </LinearLayout>
+
