--- a/res/layout/exercise_info.xml
+++ b/res/layout/exercise_info.xml
@@ -3,7 +3,7 @@
               xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1" android:background="#ffffff">
+              android:weightSum="1" android:background="@color/light_gray_1">
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp" android:layout_gravity="center_horizontal"
@@ -20,7 +20,8 @@
             android:layout_height="match_parent"
             android:text="Информация об упражнении"
             android:id="@+id/textView3" android:layout_gravity="center_horizontal" android:textColor="#000000"
-            android:textSize="20sp" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
+            android:textSize="20sp" android:layout_marginLeft="15dp" android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp" android:layout_marginBottom="10dp"
+            android:background="@color/light_gray_1"/>
 </LinearLayout>
 
