--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -40,7 +40,7 @@
                 android:childDivider="#dedede"
                 android:dividerHeight="1dp"
                 tools:listitem="@android:layout/simple_list_item_checked"
-                android:background="@color/light_grey_1"
+                android:background="@color/light_gray_1"
                 android:groupIndicator="@drawable/expandable_list_indicator"
 
                 />
