--- a/res/layout/history_detailed_list_item_removable.xml
+++ b/res/layout/history_detailed_list_item_removable.xml
@@ -27,6 +27,22 @@
                   android:textColor="#000"/>
     </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginRight="5dp">
+
+        <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:button="@drawable/check_selector"
+                android:checked="false"
+                android:focusable="false"
+                />
+    </LinearLayout>
 
 </FrameLayout>
 
