--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -6,49 +6,57 @@
         android:layout_height="60dp"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
+        android:orientation="horizontal"
         >
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_gravity="start|center_vertical"
-            >
+            android:layout_gravity="start|center_vertical">
 
-            <TextView
-                    android:id="@+id/historyItemName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="6dp"
-                    android:paddingEnd="6dp"
-                    android:textSize="20sp"
-                    android:textColor="#000"
-                    android:ellipsize="start"
-                    android:text="@string/history_list_item_name"
-                    />
-            <TextView
-                    android:id="@+id/historyItemDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="5dp"
-                    android:textSize="15sp"
-                    android:textAlignment="center"
-                    android:textColor="#000"
-                    android:text="@string/history_list_item_date"
+        <TextView
+                android:id="@+id/historyItemName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                android:textSize="20sp"
+                android:textColor="#000"
+                android:ellipsize="start"
+                android:text="@string/history_list_item_name"
+                />
 
-                    />
+        <TextView
+                android:id="@+id/historyItemDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:paddingEnd="5dp"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:text="@string/history_list_item_date"
+                />
     </LinearLayout>
 
-    <CheckBox
-            android:id="@+id/historyCheckBox"
+    <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
+            android:layout_height="match_parent"
             android:layout_gravity="end|center_vertical"
-            android:button="@drawable/check_selector"
-            android:checked="false"
-            />
+            >
 
+        <CheckBox
+                android:id="@+id/historyCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:button="@drawable/check_selector"
+                android:checked="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
+
+    </LinearLayout>
 </FrameLayout>
