--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -17,6 +17,8 @@
             android:paddingEnd="5dp"
             android:layout_gravity="end|center_vertical"
             android:button="@drawable/check_selector"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:checked="false"
             />
 
