--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -72,11 +72,12 @@
                 android:textAlignment="center"
                 android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
+                android:id="@+id/button_add"
                 android:layout_gravity="end|bottom"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:textSize="50sp"
+                android:visibility="visible"
                 android:textColor="#fff"/>
 
         <ImageButton
