--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -51,7 +51,7 @@
                 android:textAlignment="center"
                 android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
-                android:id="@+id/button"
+                android:id="@+id/button_add"
                 android:layout_gravity="right|bottom"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
