Add new pseudo-POJO classes with ViewHolders, create Expandable list adapter (TrainingListAdapter)

--- a/res/layout/expandable_list_item_child_removable.xml
+++ b/res/layout/expandable_list_item_child_removable.xml
@@ -72,7 +72,7 @@
                 android:layout_height="fill_parent"
                 android:gravity="center_horizontal"
                 android:button="@drawable/check_selector"
-                android:checked="false"
+                android:checkBox="false"
                 />
 
     </LinearLayout>
