--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -19,7 +19,7 @@
             android:button="@drawable/check_selector"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:checked="false"
+            android:checkBox="false"
             />
 
     <TextView
