--- a/res/layout/list_item_exercises.xml
+++ b/res/layout/list_item_exercises.xml
@@ -17,7 +17,7 @@
             android:paddingEnd="5dp"
             android:layout_gravity="end|center_vertical"
             android:button="@drawable/check_selector"
-            android:checked="false"
+            android:checkBox="false"
     />
 
     <TextView
