--- a/res/layout/workout_creating.xml
+++ b/res/layout/workout_creating.xml
@@ -17,12 +17,12 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="Создание тренировки"
+                android:text="@string/training_creating"
                 android:id="@+id/textView"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                android:textSize="30sp"
+                android:layout_marginStart="20dp"/>
     </FrameLayout>
 
     <FrameLayout
@@ -39,7 +39,7 @@
                 android:divider="#dedede"
                 android:childDivider="#dedede"
                 android:dividerHeight="1dp"
-                tools:listitem="@android:layout/simple_list_item_checked"
+                tools:listitem="@layout/expandable_list_item_removable"
                 android:background="@color/light_gray_1"
                 android:groupIndicator="@drawable/expandable_list_indicator"
 
@@ -52,13 +52,24 @@
                 android:background="@drawable/round_button"
                 android:src="@drawable/ic_add_white_24dp_xxhd"
                 android:id="@+id/button_add"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="20dp"
+                android:layout_gravity="end|bottom"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:textSize="50dp"
+                android:textSize="50sp"
                 android:textColor="#ffffff"/>
 
-       
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_delete"
+                android:src="@drawable/ic_delete_white_24dp_xxhdpi"
+                android:id="@+id/button_delete"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="50sp"
+                android:visibility="invisible"/>
     </FrameLayout>
 </LinearLayout>
 
