--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -53,7 +53,7 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:button="@drawable/check_selector"
-                android:checkBox="false"
+                android:checked="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 />
