--- a/res/layout/workout_preview.xml
+++ b/res/layout/workout_preview.xml
@@ -51,7 +51,7 @@
                 android:textAlignment="center"
                 android:background="@drawable/button_end"
                 android:src="@drawable/ic_arrow_forward_white_24dp"
-                android:id="@+id/finishButton"
+                android:id="@+id/startButton"
                 android:layout_gravity="end|bottom"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
