--- a/res/layout/expandable_list_item_child_removable.xml
+++ b/res/layout/expandable_list_item_child_removable.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="5dp"
              android:paddingTop="5dp"
              android:textColor="#000"
-             android:paddingStart="50dp"
+             android:paddingStart="40dp"
              android:background="@color/light_gray_2">
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/weight"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="#000"
                 />
 
@@ -28,22 +23,14 @@
                 android:id="@+id/textViewWeight"
                 android:hint="@string/kg"
                 android:layout_marginStart="5dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="#000"/>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/reiterations"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="#000"
 
                 />
@@ -56,27 +43,15 @@
                 android:hint="@string/times"
                 android:text="@string/empty_string"
                 android:layout_marginStart="5dp"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="#000"/>
-    </LinearLayout>
 
-    <LinearLayout
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="5dp"
-            >
         <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center_horizontal"
                 android:button="@drawable/check_selector"
-                android:checked="false"
-                />
+                android:checked="false"/>
 
-    </LinearLayout>
-
-
-
-</FrameLayout>
+</LinearLayout>
