--- a/res/layout/expandable_list_item_removable.xml
+++ b/res/layout/expandable_list_item_removable.xml
@@ -24,8 +24,8 @@
         <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="11dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="10dp"
                 android:gravity="end"
                 android:button="@drawable/check_selector"
