--- a/res/layout/set_list_item.xml
+++ b/res/layout/set_list_item.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginTop="5dp" android:layout_marginBottom="5dp">
+              android:paddingTop="10dp"
+              android:paddingBottom="10dp">
 
-    <TextView
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight"
+                android:textSize="20sp"
+                android:textColor="#000"/>
+        <TextView
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewWeight"
+                android:hint="@string/kg"
+                android:layout_marginStart="5dp" android:layout_marginEnd="20dp"
+                android:textSize="20sp"
+                android:textColor="#000"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/weight"
-            android:textSize="20sp"
-            android:textColor="#000"
-    />
-
-    <TextView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewWeight"
-            android:hint="@string/kg"
-            android:layout_marginStart="5dp" android:layout_marginEnd="20dp"
+            android:text="@string/sets_short"
             android:textSize="20sp"
             android:textColor="#000"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/reiterations"
-            android:textSize="20sp"
-            android:textColor="#000"
-    />
-
-    <TextView
-            android:layout_width="60dp"
+        <TextView
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:id="@+id/textViewReps"
             android:hint="@string/times"
             android:layout_marginStart="5dp"
             android:textSize="20sp"
             android:textColor="#000"/>
+
+
+    <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="end"
+            android:button="@drawable/check_selector"
+            android:checked="false"
+            android:focusable="false"/>
 
 </LinearLayout>
