--- a/res/layout/sets_creating.xml
+++ b/res/layout/sets_creating.xml
@@ -34,9 +34,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="15dp"
                 tools:listitem="@layout/set_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"
@@ -63,6 +63,19 @@
                 android:background="@drawable/button_end"
                 android:src="@drawable/ic_done_white_24dp"
                 android:id="@+id/button_end"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="20dp"
+                android:visibility="invisible"
+                android:textSize="50sp"/>
+
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:background="@drawable/button_delete"
+                android:src="@drawable/ic_delete_red_24dp"
+                android:id="@+id/button_delete"
                 android:layout_gravity="start|bottom"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="20dp"
