Code improvements and HistoryTrainingActivity

--- a/res/layout/history_training.xml
+++ b/res/layout/history_training.xml
@@ -19,17 +19,16 @@
                 android:layout_height="40dp"
                 android:text="@string/history_title"
                 android:id="@+id/textView"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                android:textSize="30sp"
+                android:layout_marginStart="20dp"/>
     </FrameLayout>
 
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f6f9fb">
-
 
         <ExpandableListView
                 android:id="@+id/historyExpandableListView"
@@ -41,8 +40,6 @@
                 android:dividerHeight="1dp"
                 tools:listitem="@layout/expandable_list_item"
                 android:background="@color/light_gray_1"
-                android:groupIndicator="@drawable/expandable_list_indicator"
-
-                />
+                android:groupIndicator="@drawable/expandable_list_indicator"/>
     </FrameLayout>
 </LinearLayout>
