--- a/res/layout/sets_creating.xml
+++ b/res/layout/sets_creating.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="15dp"
-                tools:listitem="@layout/set_list_item"
+                tools:listitem="@layout/sets_creating_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"
                 />
