--- a/res/layout/exercises_full_list.xml
+++ b/res/layout/exercises_full_list.xml
@@ -19,10 +19,10 @@
                 android:layout_height="40dp"
                 android:text="@string/exercises_list"
                 android:id="@+id/textView"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="start|center_vertical"
                 android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                android:textSize="30sp"
+                android:layout_marginStart="20dp"/>
     </FrameLayout>
 
     <FrameLayout
@@ -36,7 +36,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/trainList"
                 android:layout_gravity="center_horizontal|top"
-                tools:listitem="@layout/list_item_exercises_full_list"
+                tools:listitem="@layout/exercises_full_list_list_item"
                 android:divider="#dedede"
                 android:dividerHeight="1dp"
                 android:choiceMode="singleChoice"/>
