--- a/res/layout/exercises_full_list_list_item.xml
+++ b/res/layout/exercises_full_list_list_item.xml
@@ -23,7 +23,6 @@
             android:textSize="20sp"
             android:textColor="#000"
             android:textAlignment="center"
-            android:layout_centerInParent="true"
             android:layout_gravity="center_vertical|start"/>
 
     <ImageButton
@@ -40,6 +39,6 @@
             android:textColor="#ffffff"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginStart="20dp"/>
 
 </LinearLayout>
