--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -3,24 +3,23 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:paddingStart="6dp"
-        android:paddingEnd="6dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
         android:orientation="horizontal"
         >
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical">
 
         <TextView
                 android:id="@+id/historyItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
+                android:layout_marginStart="10dp"
                 android:textSize="20sp"
                 android:textColor="#000"
                 android:ellipsize="start"
@@ -31,9 +30,10 @@
                 android:id="@+id/historyItemDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="15dp"
-                android:paddingEnd="5dp"
-                android:textSize="15sp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="18sp"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:text="@string/history_list_item_date"
@@ -49,9 +49,8 @@
         <CheckBox
                 android:id="@+id/historyCheckBox"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
                 android:button="@drawable/check_selector"
                 android:checked="false"
                 android:focusable="false"
