--- a/res/layout/main_list_item.xml
+++ b/res/layout/main_list_item.xml
@@ -7,7 +7,7 @@
         android:layout_height="60dp"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
->
+        >
 
     <CheckBox
             android:id="@+id/checkBox"
@@ -17,8 +17,10 @@
             android:paddingEnd="5dp"
             android:layout_gravity="end|center_vertical"
             android:button="@drawable/check_selector"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:checked="false"
-    />
+            />
 
     <TextView
             android:id="@+id/listItem"
@@ -26,11 +28,12 @@
             android:layout_height="wrap_content"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
-            android:text="@string/exercise_name"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="@string/workout_name"
             android:textSize="20sp"
             android:textColor="#000"
             android:textAlignment="center"
-            android:layout_centerInParent="true"
-            android:layout_gravity="left|center_vertical"/>
+            android:layout_gravity="start|center_vertical"/>
 
 </FrameLayout>
