--- a/res/layout/out_of_use_history_training_list_item.xml
+++ b/res/layout/out_of_use_history_training_list_item.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             >
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,7 +19,6 @@
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:gravity="center_vertical"
-                  android:text="Название упражнения"
                   android:ellipsize="marquee"
                   android:maxLines="1"
                   android:textSize="20sp"
@@ -31,7 +30,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="5dp">
+            android:layout_marginEnd="5dp">
 
         <CheckBox
                 android:id="@+id/checkBox"
